force-app/main/default/objects/CPS_Response__c/CPS_Response__c.object-meta.xml
<CustomObject>
    <label>CPS Response</label>
    <nameField>
        <displayFormat>C-{000}</displayFormat>
        <label>CPS Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPS Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>