force-app/main/default/objects/CPS_Response__c/fields/CPS_Response_Type__c.field-meta.xml
<CustomField>
    <fullName>CPS_Response_Type__c</fullName>
    <label>CPS Response Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>