force-app/main/default/objects/CPS_Response__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Response_Id__c</columns>
    <columns>Response__c</columns>
    <columns>CPS_Response_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>